--- a/src/layout/Header/header.module.css
+++ b/src/layout/Header/header.module.css
@@ -1,7 +1,7 @@
 .logo_a {
     display: grid;
     gap: 4px;
-    justify-content: left;
+    justify-content: center;
     justify-items: center;
     text-align: center;
     
